# transcription-lab

./: .gitignore
transcription-lab/: README.md  pyproject.toml
transcription-lab/configs/: default.yaml
transcription-lab/data/: session.json
transcription-lab/data/audio/: .gitkeep
transcription-lab/data/transcripts/: .gitkeep  meeting1_full_transcript.txt  meeting1_mic_ref.txt  meeting1_system_ref.txt  meeting1_transcript.txt
transcription-lab/data/voiceprints/: .gitkeep
transcription-lab/results/: .gitkeep  experiment_log.csv  experiment_log.md  metrics_log.csv  metrics_log.md
transcription-lab/scripts/: evaluate_wer.py  run_experiment_queue.py  run_next_experiment.sh
transcription-lab/src/transcription_lab/: __init__.py  audio.py  cli.py  diarization.py  evaluation.py  optimizer.py  transcriber.py
transcription-lab/tests/: __init__.py  test_audio.py  test_cli.py  test_diarization.py  test_evaluation.py  test_optimizer.py  test_transcriber.py
